# display_tool

./: CMakeLists.txt  README.md
examples/: glfw_initializer.cpp  glfw_initializer.h  glfw_window_2d.cpp  glfw_window_2d.h  image_2d.cpp  mesh_3d.cpp
examples/2d/: glfw_window2d_GL_v21.hpp  glfw_window2d_GL_v33.hpp
examples/colormap/: .gitignore  colormaps.hpp  gen_colormap.py
python/: README.MD  plot_spectrum.py
src/: main.cpp
